Fixes for dark mode.

--- a/src/_flairs.less
+++ b/src/_flairs.less
@@ -86,81 +86,6 @@
   }
 }
 
-// not used?
-.flair-blueflair[title],
-.flair-greenflair[title],
-.flair-orangeflair[title],
-.flair-purpleflair[title],
-.flair-redflair[title] {
-  color: #fff;
-  font-size: 10px;
-  padding: 0 10px 0 0;
-  -webkit-transition: .3s;
-  transition: .3s;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border-radius: 20px
-}
-
-// not used?
-.flair-blueflair[title]:before,
-.flair-greenflair[title]:before,
-.flair-orangeflair[title]:before,
-.flair-purpleflair[title]:before,
-.flair-redflair[title]:before {
-  font-weight: bold;
-  display: inline-block;
-  font-size: 10px;
-  padding: 4px 8px;
-  border-radius: 20px 0 0 20px;
-  margin-right: 8px
-}
-
-.flair-redflair[title] {
-  background: @lipstick;
-
-  &:hover,
-  &:before {
-    background: @cerise;
-  }
-}
-
-.flair-purpleflair[title] {
-  background: @blue-gem;
-
-  &:hover,
-  &:before {
-    background: @blue-violet;
-  }
-}
-
-.flair-greenflair[title] {
-  background: #005900;
-
-  &:hover,
-  &:before {
-    background: green;
-  }
-}
-
-.flair-orangeflair[title] {
-  background: @rock-spray;
-
-  &:hover,
-  &:before {
-    background: @sorbus;
-  }
-}
-
-.flair-blueflair[title] {
-  background: @endeavour;
-
-  &:hover,
-  &:before {
-    background: @royal-blue;
-  }
-}
-
 .generate-flair-rows(@col, @rows, @i: 0) when (@i <= @rows) {
   .flair-card-@{col}-@{i}:before {
     background-position: -(@flair-max-width * @col) -(@flair-height * @i);
