--- a/src/base.less
+++ b/src/base.less
@@ -1135,12 +1135,12 @@ form#image-upload.image-upload {
 
 .stickied a.title:link,
 .stickied a.title:visited {
-  color: #2b8b27 !important
+  color: #2b8b27;
 }
 
 .over18 a.title:link,
 .over18 a.title:visited {
-  color: #d10023 !important
+  color: #d10023;
 }
 
 li.searchfacet {
